# proj-pymicetracking-panel

./: .gitignore  .pre-commit-config.yaml  bokeh.config  main.py  panel.config  pyproject.toml  readme.md  requirements.txt  rois.json  setup-dev.sh
.github/workflows/: code-quality.yml  pre-commit.yml
camera_tab/: camera_tab.py
documentation_tab/: documentation_tab.py
env/: pyvenv.cfg
ethological_tab/: ethological_tab.py
extra_tools/: testVideo_json.py
extra_tools_tab/: convert.sh  extra_tools_tab.py  testGPU.py
playback_tab/: playback_tab.py
src/: main.py
src/pymicetracking_panel/: __init__.py  app.py  main.py
src/pymicetracking_panel/camera_tab/: camera_tab.py
src/pymicetracking_panel/ethological_tab/: ethological_tab.py  file_handler.py  heatmap_analysis.py  testVideo_json.py  tracking_visualizer.py  video_analysis.py
src/pymicetracking_panel/extra_tools_tab/: extra_tools_tab.py  test_gpu.py
src/pymicetracking_panel/irl_tab/: irl_tab.py
src/pymicetracking_panel/playback_tab/: playback_tab.py
src/pymicetracking_panel/synthetic_tab/: synthetic_tab.py
src/pymicetracking_panel/tracking_tab/: export_json.py  export_roi.py  tracking_tab.py
src/pymicetracking_panel/tracking_tab/processing/: tracking.py
tests/: test_main.py
tracking_tab/: export.py  export_json.py  export_roi.py  tracking.py  tracking_tab.py
tracking_tab/processing/: detection.py  tracking.py
