[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymicetracking-panel"
version = "0.1.0"
description = "Mice tracking application with Panel interface and YOLO-based computer vision"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mouse-tracking", "computer-vision", "yolo", "panel", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core YOLO packages
    "ultralytics==8.3.102",
    "ultralytics-thop==2.0.14",
    
    # PyTorch ecosystem (essential for GPU)
    "torch==2.6.0",
    "torchvision==0.21.0",
    "triton==3.2.0",
    
    # NVIDIA CUDA packages (necessary for GPU)
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-cusparselt-cu12==0.6.2",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    
    # Computer vision essentials
    "opencv-python==4.11.0.86",
    "pillow==10.4.0",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    
    # Machine learning core
    "numpy==1.26.4",
    "scipy==1.15.1",
    "scikit-learn==1.6.1",
    "pandas==2.2.3",
    
    # Visualization
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    
    # Deep learning utilities
    "timm==1.0.15",
    "safetensors==0.5.3",
    "huggingface-hub==0.31.1",
    
    # Utilities
    "tqdm==4.67.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "urllib3==1.26.20",
    
    # Panel/Bokeh specific packages
    "panel>=1.0.0",
    "bleach==6.2.0",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "idna==3.10",
    "Jinja2==3.1.6",
    "linkify-it-py==2.0.3",
    "Markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "narwhals==2.0.1",
    "packaging==25.0",
    "param==2.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyviz_comms==3.0.6",
    "six==1.17.0",
    "tornado==6.5.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "uc-micro-py==1.0.3",
    "webencodings==0.5.1",
    "xyzservices==2025.4.0",
    
    # Geometric operations
    "shapely==2.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
pymicetracking = "main:main"

[project.urls]
Homepage = "https://github.com/heltonmaia/proj-pymicetracking-panel"
Repository = "https://github.com/heltonmaia/proj-pymicetracking-panel.git"
Issues = "https://github.com/heltonmaia/proj-pymicetracking-panel/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "camera_tab",
    "documentation_tab", 
    "ethological_tab",
    "irl_tab",
    "playback_tab",
    "synthetic_tab",
    "tracking_tab",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"